--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.33 2003/08/29 16:01:47 dnelson Exp $
+# $Id: configure.in,v 1.34 2003/09/06 02:06:05 dnelson Exp $
 AC_INIT(spamass-milter, 0.2.0+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.33 $)
+AC_REVISION($Revision: 1.34 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -127,4 +127,4 @@ if test ! -e spamass-milter.man.in ; then
 fi
 
 # Files to create from .in templates:
-AC_OUTPUT(Makefile contrib/spamass-milter.spec spamass-milter.1 spamass-milter.man)
+AC_OUTPUT(Makefile contrib/spamass-milter.spec spamass-milter.1)
