--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.38 2004/03/18 18:37:07 dnelson Exp $
+# $Id: configure.in,v 1.39 2004/07/01 23:02:00 dnelson Exp $
 AC_INIT(spamass-milter, 0.2.0+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.38 $)
+AC_REVISION($Revision: 1.39 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -20,8 +20,10 @@ AC_LANG(C++)
 # Enable useable exception handler if it exists.
 AC_CXX_VERBOSE_TERMINATE_HANDLER
 
-# Try and disable all inlining; gdb cannot process inline methods
+# Try and disable all inlining; gdb shows the inlined function in a
+# stack trace and you lose the caller's frame.  Bad for debugging.
 AC_PIKE_COMPILER_FLAG(-fno-default-inline,fno_default_inline,CXXFLAGS)
+AC_PIKE_COMPILER_FLAG(-fno-inline,fno_inline,CXXFLAGS)
 
 PIKE_INCLUDE_PATHS
 PIKE_LIBRARY_PATHS
