--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.40 2004/09/23 20:28:58 dnelson Exp $
-AC_INIT(spamass-milter, 0.2.0+cvs)
+# $Id: configure.in,v 1.41 2005/02/04 18:55:32 dnelson Exp $
+AC_INIT(spamass-milter, 0.3.0)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.40 $)
+AC_REVISION($Revision: 1.41 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
