--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.41 2005/02/04 18:55:32 dnelson Exp $
+# $Id: configure.in,v 1.42 2005/10/06 15:12:39 dnelson Exp $
 AC_INIT(spamass-milter, 0.3.0)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.41 $)
+AC_REVISION($Revision: 1.42 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -38,9 +38,9 @@ AC_ARG_VAR(SPAMC, [Path to spamc])
 AC_DEFINE_UNQUOTED(SPAMC, "$SPAMC", [Path to spamc])
 
 # Search for sendmail
-AC_PATH_PROG(SENDMAIL, sendmail,, [$PATH:/usr/lib])
+AC_PATH_PROG(SENDMAIL, sendmail, , [$PATH:/usr/sbin:/usr/lib])
 if test "x$SENDMAIL" = x ; then
-   AC_MSG_ERROR([Sendmail not found.  Check your $PATH variable])
+   AC_MSG_ERROR([Sendmail not found.  Check your PATH variable])
 fi
 AC_ARG_VAR(SENDMAIL, [Path to sendmail])
 AC_DEFINE_UNQUOTED(SENDMAIL, "$SENDMAIL", [Path to sendmail])
