savannah disabled ftp uploads, at some point, so try rsync again

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.22 2006/01/23 20:47:11 dnelson Exp $
+## $Id: Makefile.am,v 1.23 2011/02/14 21:46:13 dnelson Exp $
 
 AUTOMAKE_OPTIONS = no-dependencies foreign dist-bzip2
 
@@ -38,8 +38,12 @@ sign: dist-all
 	done
 
 upload: dist-all sign
-	ncftpput savannah.gnu.org incoming/savannah/spamass-milt \
-		${DIST_ARCHIVES} ${DIST_ARCHIVE_SIGS}
+	rsync -a --progress ${DIST_ARCHIVES} dl.sv.nongnu.org:/releases/spamass-milt/
+
+# ftp got disabled at some point?
+#upload: dist-all sign
+#	ncftpput savannah.gnu.org incoming/savannah/spamass-milt \
+#		${DIST_ARCHIVES} ${DIST_ARCHIVE_SIGS}
 
 # The good old way
 #upload: dist-all
