--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.44 2011/02/14 21:31:30 dnelson Exp $
-AC_INIT(spamass-milter, 0.3.2)
+# $Id: configure.in,v 1.45 2014/08/15 01:51:19 kovert Exp $
+AC_INIT(spamass-milter, 0.3.9.dev)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.44 $)
+AC_REVISION($Revision: 1.45 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
