--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.45 2014/08/15 01:51:19 kovert Exp $
-AC_INIT(spamass-milter, 0.3.9.dev)
+# $Id: configure.in,v 1.46 2014/09/11 00:43:25 kovert Exp $
+AC_INIT(spamass-milter, 0.4.0)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.45 $)
+AC_REVISION($Revision: 1.46 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
