--- a/spamass-milter.1.in
+++ b/spamass-milter.1.in
@@ -10,7 +10,7 @@
 .Fl p Ar socket
 .Op Fl a
 .Op Fl b Ns | Ns Fl B Ar spamaddress
-.Op Fl C rejectcode
+.Op Fl C Ar rejectcode
 .Op Fl d Ar debugflags
 .Op Fl D Ar host
 .Op Fl e Ar defaultdomain
